# fundamentals-of-computer-graphics

./: .gitignore  main.py  pyproject.toml
week1/: assignment2.py
week2/: 03_star_rotation.py  assignment4.py
week3/: 03_kadai_sample.py
week4/: kadai04_sample.py  vector_example.py
week5/: kadai05_sample.py
week6/: kadai06_sample.py
week7/: kadai07_sample_utf.py
week8/: kadai08_sample_utf8.py
week9/: 09.py
