[project]
name = "fundamentals-of-computer-graphics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pyopengl==3.1.7",
]

[tool.uv.sources]
pyopengl = { path = "bin/PyOpenGL-3.1.7-cp312-cp312-win_amd64.whl" }
